[tool.poetry]
name = "personalized-classification"
version = "0.1.0"
description = ""
authors = ["JennyMa0517 <36107336+JennyMa0517@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
